# ingesion-fastapi

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: .env  main.py
infra/postgres/: init.sql  postgresql.conf
nginx/: nginx.conf
