[tool.poetry]
name = "neo4j-carleton-fastApi"
version = "0.1.0"
description = ""
authors = ["Jagadeesh Garapati <jagadeesh.garapati.ext@nokia.com>"]
readme = "README.md"
packages = [{include = "neo4j"}]

[tool.poetry.dependencies]
python = "^3.10.7"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
neo4j = "^5.0.1"
python-dotenv = "^0.21.0"
pandas="^1.5.2"
graphistry="^0.28.6"
pip = "^22.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
